Fixes layout shifts for featured images

--- a/assets/css/ie-editor.css
+++ b/assets/css/ie-editor.css
@@ -361,6 +361,11 @@ figcaption {
 	padding: 0;
 }
 
+.post-thumbnail img.attachment-post-thumbnail {
+	width: 100%;
+	height: calc(attr(width)/attr(height)*1%);
+}
+
 select {
 	border: 3px solid #39414d;
 	border-radius: 0;
