--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -2102,6 +2102,11 @@ figcaption {
 	padding: 0;
 }
 
+.post-thumbnail img.attachment-post-thumbnail {
+	width: 100%;
+	height: calc(attr(width)/attr(height)*1%);
+}
+
 /* Over here, place any elements that do not need to have their own file. */
 b,
 strong {
